# ph0sphor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/ph0sphor-client/: Cargo.toml
crates/ph0sphor-client/src/: app.rs  config.rs  event.rs  lib.rs  local.rs  main.rs  net.rs  state.rs  theme.rs  ui.rs
crates/ph0sphor-client/tests/: handshake.rs  pairing.rs
crates/ph0sphor-core/: Cargo.toml
crates/ph0sphor-core/src/: error.rs  event.rs  lib.rs  metric.rs  theme.rs  version.rs
crates/ph0sphor-protocol/: Cargo.toml  build.rs
crates/ph0sphor-protocol/src/: convert.rs  delta.rs  fixtures.rs  lib.rs
crates/ph0sphor-protocol/tests/: round_trip.rs
crates/ph0sphor-server/: Cargo.toml
crates/ph0sphor-server/src/: auth.rs  collectors.rs  config.rs  control.rs  lib.rs  main.rs  net.rs  state.rs
crates/ph0sphor-server/tests/: ws_handshake.rs
crates/ph0sphorctl/: Cargo.toml
crates/ph0sphorctl/src/: main.rs
docs/: configuration.md  design.md  installation.md  performance-budget.md  protocol.md  roadmap.md  security-model.md  server-client-testing.md  vaio-p-client-vm-testing.md  vaio-p-client.md
docs/screenshots/: README.md  home.txt  log.txt  mail.txt  sys.txt  time.txt  weather.txt
examples/: client.toml  server.toml
examples/demo-data/: README.md
examples/themes/: amber-crt.toml  phosphor-green.toml
packaging/: README.md
packaging/linux/: README.md  ph0sphor-client@.service  ph0sphor-server.service
packaging/macos/: README.md
packaging/windows/: README.md
proto/: ph0sphor.proto
