[package]
name = "ph0sphor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Shared domain types for PHOSPHOR (metrics, events, themes, config)."

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
