[package]
name = "ph0sphor-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Wire schema and encode/decode logic for the PHOSPHOR protocol."

[dependencies]
ph0sphor-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
