[package]
name = "ph0sphorctl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Administrative CLI for PHOSPHOR: pairing, status, config validation, debug tools."

[[bin]]
name = "ph0sphorctl"
path = "src/main.rs"

[dependencies]
ph0sphor-core = { workspace = true }
ph0sphor-protocol = { workspace = true }
